# zap

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  README.md  README_draft.md  pyproject.toml  pytest.ini  zap_config.yaml
.github/workflows/: manual_publish.yml  publish.yml  publish_tags.yml  test.yml  test_coverage.yml
automations/documentation/: task.sh  templating_documentation.txt
examples/documentation/: agents.txt  cliux.txt  commands.txt  task.sh
examples/fibonacci/: fibonacci.txt
examples/improve_tests/: git_analyzer.sh  git_analyzer.txt
examples/write_tests/: templating.sh  templating.txt
scripts/: lint.ps1  lint.sh  publish.ps1  publish.sh  run_tests.sh  run_with_coverage.ps1  run_with_coverage.sh  test.ps1  test_with_coverage.ps1
tests/: __init__.py  test_utils.py
tests/cliux/: test_cliux.py
tests/commands/: __init__.py
tests/git_analyzer/: conftest.py  test_analyzer.py  test_complex_repo_structure.py  test_config.py  test_error_handling.py  test_git_repo.py  test_integration.py  test_logger.py  test_parser_edge_cases.py  test_parser_factory.py  test_performance.py  test_repo_explorer.py  test_repo_tries.py
tests/templating/: conftest.py  test_advanced_features.py  test_custom_resolvers.py  test_engine.py  test_error_handling.py  test_rendering.py  test_resolver.py  test_template_loading.py
tests/tools/: edit_tool.py
tests/toos/: edit_tool.py
zap/: __main__.py  agent_manager.py  app.py  app_state.py  config.py  constants.py  exceptions.py  logger.py  main.py  utils.py
zap/agents/: README.md  __init__.py  agent_config.py  agent_output.py  base.py  chat_agent.py  chat_message.py  echo_agent.py  editor_agent.py  model_capabilities.py  prompt_agent.py
zap/cliux/: README.md  __init__.py  config.py  ui.py  ui_interface.py
zap/commands/: README.md  advanced_completer.py  advanced_input.py  command_registry.py  commands.py  development_workflow.py  file_context_manager.py  git_manager.py  utility_commands.py
zap/contexts/: agent_template_context.py  context.py  context_command_manager.py  context_manager.py
zap/git_analyzer/: README.md  (+8 more)
(+72 files in other folders)
