[tool.poetry]
name = "zap"
version = "0.1.0"
description = ""
authors = ["Nikhil Pandey <nikhil@nikhil.com.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flake8 = "^7.1.0"
pyyaml = "^6.0.1"
pygit2 = "^1.15.1"
rich = "^13.7.1"
black = "^24.4.2"
litellm = "^1.42.4"
questionary = "^2.0.1"
toml = "^0.10.2"
aiofiles = "^24.1.0"
pyperclip = "^1.9.0"
pygtrie = "^2.5.0"
tiktoken = "^0.7.0"
keyboard = "^0.13.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
aiohttp = "^3.9.5"
coverage = "^7.6.0"
psutil = "^6.0.0"
boto3 = "^1.34.150"
tenacity = "^9.0.0"
diskcache = "^5.6.3"
grep-ast = {git = "https://github.com/paul-gauthier/grep-ast.git"}
networkx = "^3.3"
numpy = "^2.0.1"
scipy = "^1.14.0"
tree-sitter = "^0.22.3"
tree-sitter-rust = "^0.21.2"
tree-sitter-c-sharp = "^0.21.3"
tree-sitter-python = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
