[tool.poetry]
name = "zap"
version = "0.1.0"
description = ""
authors = ["Nikhil Pandey <nikhil@nikhil.com.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flake8 = "^7.1.0"
pyyaml = "^6.0.1"
pygit2 = "^1.15.1"
rich = "^13.7.1"
black = "^24.4.2"
litellm = "^1.44.8"
questionary = "^2.0.1"
toml = "^0.10.2"
aiofiles = "^24.1.0"
pyperclip = "^1.9.0"
pygtrie = "^2.5.0"
tiktoken = "^0.7.0"
keyboard = "^0.13.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
aiohttp = "^3.9.5"
psutil = "^6.0.0"
boto3 = "^1.34.150"
tenacity = "^9.0.0"
networkx = "^3.3"
tree-sitter-languages = "^1.10.2"
tree-sitter = "0.21.3"
aiosqlite = "^0.20.0"

[tool.poetry.dev-dependencies]
flask = {version = "^3.0.3", extras = ["async"]}
coverage = "^7.6.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
hypercorn = "^0.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
